--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
       <section class="contact-section">
          <div class="container">
             <h3>Contact Us - Form</h3>
-            <form class="contact-form">
+            <form class="contact-form" action="https://formspree.io/f/movabqzj" method="POST">
                <input type="text" name="name" placeholder="Your Name" required>
                <input type="email" name="email" placeholder="Your Email" required>
                <input type="text" name="subject" placeholder="Subject" required>
